# eli

./: .env.example  .gitignore  DEPLOY.md  README.md  app.py  render.yaml  requirements.txt
api/: README.md  pyproject.toml  requirements.txt
api/app/: analysis.py  calls.py  caregivers.py  database.py  db_models.py  ehr_context.py  elevenlabs.py  main.py  medications.py  notify.py  outbound.py  patients.py  voice.py
api/scripts/: init_db.py
sentinelcall/: .env.example  .gitignore  DECISIONS.md  README.md  TWILIO_SETUP.md  pyproject.toml  render.yaml  requirements.txt
sentinelcall/sentinelcall/: __init__.py  __main__.py  config.py  demo.py  sim.py
sentinelcall/sentinelcall/agent/: inbound.py  redflags.py  states.py  supervisor.py
sentinelcall/sentinelcall/data/: __init__.py  call_records.json  patients.json  protocol_generic.md  protocol_knee.md  record.py  reference_rag.py
sentinelcall/sentinelcall/gateway/: __init__.py  llm.py
sentinelcall/sentinelcall/obs/: __init__.py  trace.py
sentinelcall/sentinelcall/pipeline/: emergency.py  ger.py  loop.py  safety_gate.py  stt.py  tts.py
sentinelcall/sentinelcall/telephony/: dashboard.html  dashboard_api.py  twilio_sms.py  twilio_voice.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/calls/[id]/: page.tsx
web/src/app/patients/[id]/: page.tsx
web/src/components/: trigger-call-button.tsx  ui.tsx
web/src/lib/: api.ts  format.ts
