[project]
name = "arya-api"
version = "0.1.0"
description = "Backend API for a post-op voice agent (Twilio + ElevenLabs)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "twilio>=9.0",
    "websockets>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "audioop-lts>=0.2.2 ; python_full_version >= '3.13'",
    "python-multipart>=0.0.32",
    "anthropic>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
